--- a/app/src/main/res/navigation/main_nav_graph.xml
+++ b/app/src/main/res/navigation/main_nav_graph.xml
@@ -3,10 +3,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/main_nav_graph"
-    app:startDestination="@id/transferMoneyFragment">
+    app:startDestination="@id/productListFragment">
     <fragment
         android:id="@+id/transferMoneyFragment"
         android:name="com.octal.actorpay.TransferMoneyFragment"
         android:label="@string/transfer_money"
         tools:layout="@layout/fragment_transfer_money" />
+    <fragment
+        android:id="@+id/productListFragment"
+        android:name="com.octal.actorpay.ProductsListFragment"
+        android:label="@string/product_list"
+        tools:layout="@layout/fragment_products_list" />
 </navigation>
