--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,7 @@
     <color name="white">#FFFFFFFF</color>
     <color name="light_blue">#68acd0</color>
     <color name="text_color">#565656</color>
+    <color name="card_bg_color">#f6f6f6</color>
+    <color name="pink_color">#ed3460</color>
+    <color name="blue_color">#0078b7</color>
 </resources>
