--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,8 @@
     <color name="card_bg_color">#f6f6f6</color>
     <color name="pink_color">#ed3460</color>
     <color name="blue_color">#0078b7</color>
+    <color name="green_color">#00A61B</color>
+    <color name="light_grey">#8E9092</color>
+    <color name="very_light_grey">#DBDBDB</color>
+    <color name="light_grey_home">#f9f9f9</color>
 </resources>
