--- a/app/src/main/res/layout/fragment_misc.xml
+++ b/app/src/main/res/layout/fragment_misc.xml
@@ -14,20 +14,96 @@
         layout="@layout/common_toolbar"
         android:id="@+id/toolbar"/>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginTop="15dp"
+        android:padding="15dp"
         app:layout_constraintTop_toBottomOf="@id/toolbar"
         app:layout_constraintBottom_toBottomOf="parent"
+        android:orientation="vertical"
         android:background="@drawable/round_corner_white_bg">
 
-        <RelativeLayout
-            android:layout_width="match_parent"
+        <androidx.cardview.widget.CardView
+            android:id="@+id/aboutUsText"
+            android:layout_width="0dp"
+            app:cardCornerRadius="6dp"
+            android:layout_marginTop="20dp"
             android:layout_height="wrap_content">
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="6dp">
+                <RelativeLayout
+                    android:id="@+id/notificationImageLayout"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:background="@drawable/notification_item_grey_bg">
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerVertical="true"
+                        android:src="@drawable/tick_blue"
+                        android:layout_centerInParent="true" />
+                </RelativeLayout>
 
-        </RelativeLayout>
-    </androidx.constraintlayout.widget.ConstraintLayout>
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:layout_toEndOf="@id/notificationImageLayout"
+                    android:fontFamily="@font/poppins_bold"
+                    android:padding="10dp"
+                    android:text="@string/about_us"
+                    android:textColor="@color/text_color"
+                    android:textSize="16sp"
+                    app:drawableRightCompat="@drawable/next" />
+
+            </RelativeLayout>
+        </androidx.cardview.widget.CardView>
+        <androidx.cardview.widget.CardView
+            android:id="@+id/contactUsText"
+            android:layout_width="0dp"
+            app:cardCornerRadius="6dp"
+            android:layout_marginTop="20dp"
+            app:layout_constraintBottom_toBottomOf="@id/aboutUsText"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_height="wrap_content">
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="6dp">
+                <RelativeLayout
+                    android:id="@+id/notificationImageLayout"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:background="@drawable/notification_item_grey_bg">
+                    <ImageView
+                        android:id="@+id/itemImage"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerVertical="true"
+                        android:src="@drawable/tick_blue"
+                        android:layout_centerInParent="true" />
+                </RelativeLayout>
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:layout_toEndOf="@id/notificationImageLayout"
+                    android:fontFamily="@font/poppins_bold"
+                    android:padding="10dp"
+                    android:text="@string/about_us"
+                    android:textColor="@color/text_color"
+                    android:textSize="16sp"
+                    app:drawableRightCompat="@drawable/next" />
+
+            </RelativeLayout>
+        </androidx.cardview.widget.CardView>
+    </LinearLayout>
 
 
 
