--- a/app/src/main/res/layout/fragment_notification.xml
+++ b/app/src/main/res/layout/fragment_notification.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@drawable/bg"
-    android:paddingTop="50dp"
+    android:paddingTop="60dp"
     tools:context=".NotificationFragment">
 
 
@@ -16,7 +16,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="10dp"
         android:paddingStart="15dp"
         android:paddingEnd="15dp"
         android:paddingTop="30dp"
@@ -24,6 +24,10 @@
         app:layout_constraintTop_toBottomOf="@id/toolbar"
         app:layout_constraintBottom_toBottomOf="parent"
         android:background="@drawable/round_corner_white_bg">
+
+        <include layout="@layout/notification_item_design"/>
+        <include layout="@layout/notification_item_design"/>
+        <include layout="@layout/notification_item_design"/>
 
     </LinearLayout>
     <!--
