--- a/app/src/main/res/layout/product_list_item.xml
+++ b/app/src/main/res/layout/product_list_item.xml
@@ -41,10 +41,10 @@
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/poppins_semibold"
                     android:paddingEnd="10dp"
+                    android:singleLine="true"
                     android:text="@string/there_are_many_variations"
                     android:textColor="#383838"
-                    android:textSize="14sp"
-                    android:singleLine="true"
+                    android:textSize="16sp"
                     app:drawableEndCompat="@drawable/like_small"
                     tools:ignore="RtlSymmetry" />
 
@@ -56,7 +56,7 @@
                     android:fontFamily="@font/poppins_medium"
                     android:text="@string/dummy_cancel_amount"
                     android:textColor="#ed3460"
-                    android:textSize="10sp" />
+                    android:textSize="12sp" />
 
                 <TextView
                     android:id="@+id/actualPriceText"
@@ -68,7 +68,7 @@
                     android:paddingStart="10dp"
                     android:text="@string/dummy_actual_amount"
                     android:textColor="@color/blue_color"
-                    android:textSize="10sp" />
+                    android:textSize="12sp" />
 
                 <TextView
                     android:id="@+id/productDisc"
@@ -76,32 +76,32 @@
                     android:layout_height="wrap_content"
                     android:layout_below="@id/actualPriceText"
                     android:fontFamily="@font/poppins_regular"
-                    android:text="@string/dummy_text"
                     android:maxLines="2"
-                    android:textSize="10sp" />
+                    android:text="@string/dummy_text"
+                    android:textSize="12sp" />
 
                 <com.google.android.material.button.MaterialButton
                     android:id="@+id/buyNow"
                     android:layout_width="wrap_content"
-                    android:layout_height="36dp"
+                    android:layout_height="38dp"
                     android:layout_below="@id/productDisc"
                     android:backgroundTint="@color/pink_color"
                     android:fontFamily="@font/poppins_semibold"
+                    android:gravity="center"
                     android:text="@string/buy_now"
-                    android:textSize="10sp"
-                    android:gravity="center"/>
+                    android:textSize="12sp" />
 
                 <com.google.android.material.button.MaterialButton
                     android:id="@+id/addToCart"
                     android:layout_width="wrap_content"
-                    android:layout_height="36dp"
+                    android:layout_height="38dp"
                     android:layout_below="@id/productDisc"
                     android:layout_marginStart="5dp"
                     android:layout_toEndOf="@id/buyNow"
                     android:backgroundTint="@color/blue_color"
                     android:fontFamily="@font/poppins_semibold"
                     android:text="@string/add_to_cart"
-                    android:textSize="10sp"
+                    android:textSize="12sp"
                     android:gravity="center"/>
 
             </RelativeLayout>
