--- a/app/src/main/res/layout/fragment_misc.xml
+++ b/app/src/main/res/layout/fragment_misc.xml
@@ -1,57 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@drawable/bg"
     android:paddingTop="60dp"
     tools:context=".TransferMoneyFragment">
 
     <include
-        layout="@layout/common_toolbar"
-        android:id="@+id/toolbar"/>
+        android:id="@+id/toolbar"
+        layout="@layout/common_toolbar" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginTop="15dp"
-        android:padding="15dp"
-        app:layout_constraintTop_toBottomOf="@id/toolbar"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:background="@drawable/round_corner_white_bg"
         android:orientation="vertical"
-        android:background="@drawable/round_corner_white_bg">
+        android:padding="20dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/toolbar">
 
         <androidx.cardview.widget.CardView
             android:id="@+id/aboutUsText"
-            android:layout_width="0dp"
-            app:cardCornerRadius="6dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
-            android:layout_height="wrap_content">
+            app:cardCornerRadius="6dp">
+
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:padding="6dp">
-                <RelativeLayout
-                    android:id="@+id/notificationImageLayout"
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
-                    android:background="@drawable/notification_item_grey_bg">
-                    <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_centerVertical="true"
-                        android:src="@drawable/tick_blue"
-                        android:layout_centerInParent="true" />
-                </RelativeLayout>
+
+                <ImageView
+                    android:id="@+id/about_us_icon"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:background="@drawable/notification_item_grey_bg"
+                    android:padding="15dp"
+                    android:src="@drawable/about_us" />
 
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
-                    android:layout_toEndOf="@id/notificationImageLayout"
+                    android:layout_toEndOf="@id/about_us_icon"
                     android:fontFamily="@font/poppins_bold"
                     android:padding="10dp"
                     android:text="@string/about_us"
@@ -61,50 +58,149 @@
 
             </RelativeLayout>
         </androidx.cardview.widget.CardView>
+
         <androidx.cardview.widget.CardView
             android:id="@+id/contactUsText"
-            android:layout_width="0dp"
-            app:cardCornerRadius="6dp"
-            android:layout_marginTop="20dp"
-            app:layout_constraintBottom_toBottomOf="@id/aboutUsText"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_height="wrap_content">
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            app:cardCornerRadius="6dp">
+
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:padding="6dp">
-                <RelativeLayout
-                    android:id="@+id/notificationImageLayout"
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
-                    android:background="@drawable/notification_item_grey_bg">
-                    <ImageView
-                        android:id="@+id/itemImage"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_centerVertical="true"
-                        android:src="@drawable/tick_blue"
-                        android:layout_centerInParent="true" />
-                </RelativeLayout>
+
+                <ImageView
+                    android:id="@+id/contactUsImage"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:background="@drawable/notification_item_grey_bg"
+                    android:padding="15dp"
+                    android:src="@drawable/contact_us" />
 
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
-                    android:layout_toEndOf="@id/notificationImageLayout"
+                    android:layout_toEndOf="@id/contactUsImage"
                     android:fontFamily="@font/poppins_bold"
                     android:padding="10dp"
-                    android:text="@string/about_us"
+                    android:text="@string/contact_us"
                     android:textColor="@color/text_color"
                     android:textSize="16sp"
                     app:drawableRightCompat="@drawable/next" />
-
             </RelativeLayout>
         </androidx.cardview.widget.CardView>
-    </LinearLayout>
 
+        <androidx.cardview.widget.CardView
+            android:id="@+id/faqText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            app:cardCornerRadius="6dp">
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="6dp">
+
+                <ImageView
+                    android:id="@+id/faqImage"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:background="@drawable/notification_item_grey_bg"
+                    android:padding="15dp"
+                    android:src="@drawable/faq" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:layout_toEndOf="@id/faqImage"
+                    android:fontFamily="@font/poppins_bold"
+                    android:padding="10dp"
+                    android:text="@string/faq"
+                    android:textColor="@color/text_color"
+                    android:textSize="16sp"
+                    app:drawableRightCompat="@drawable/next" />
+            </RelativeLayout>
+        </androidx.cardview.widget.CardView>
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/tcText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            app:cardCornerRadius="6dp">
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="6dp">
+
+                <ImageView
+                    android:id="@+id/tcImage"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:background="@drawable/notification_item_grey_bg"
+                    android:padding="15dp"
+                    android:src="@drawable/terms" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:layout_toEndOf="@id/tcImage"
+                    android:fontFamily="@font/poppins_bold"
+                    android:padding="10dp"
+                    android:text="T&amp;C"
+                    android:textColor="@color/text_color"
+                    android:textSize="16sp"
+                    app:drawableRightCompat="@drawable/next" />
+            </RelativeLayout>
+        </androidx.cardview.widget.CardView>
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/privacyText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            app:cardCornerRadius="6dp">
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="6dp">
+
+                <ImageView
+                    android:id="@+id/privacyImage"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:background="@drawable/notification_item_grey_bg"
+                    android:padding="15dp"
+                    android:src="@drawable/privacy" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:layout_toEndOf="@id/privacyImage"
+                    android:fontFamily="@font/poppins_bold"
+                    android:padding="10dp"
+                    android:text="@string/privacy_policy"
+                    android:textColor="@color/text_color"
+                    android:textSize="16sp"
+                    app:drawableRightCompat="@drawable/next" />
+            </RelativeLayout>
+        </androidx.cardview.widget.CardView>
+
+
+    </LinearLayout>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
