--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,4 +16,9 @@
     <color name="light_grey">#8E9092</color>
     <color name="very_light_grey">#DBDBDB</color>
     <color name="light_grey_home">#f9f9f9</color>
+
+    <color name="primary">#0077b6</color>
+    <color name="transparent">#00000000</color>
+    <color name="gray">#CECACA</color>
+    <color name="gray_dark">#8E8D8D</color>
 </resources>
