--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -58,4 +58,68 @@
         <item name="boxStrokeColor">#fff</item>
         <item name="boxStrokeWidth">0dp</item>
     </style>
+
+
+    <style name="MyAlertDialog" parent="Theme.AppCompat.Dialog">
+        <item name="android:windowBackground">@android:color/transparent</item>
+        <item name="android:layout_gravity">center</item>
+        <!-- NOPE!!!!! -->
+        <item name="android:layout_width">250dp</item>
+        <!-- NOPE!!!!! -->
+        <!--<item name="android:layout_height">200dp</item>-->
+    </style>
+
+
+
+
+    <style name="MyTabLayout" parent="Base.Widget.Design.TabLayout">
+        <item name="tabTextAppearance">@style/MyTabTextAppearance</item>
+    </style>
+
+    <style name="MyTabTextAppearance" parent="TextAppearance.AppCompat.Button">
+        <item name="android:textSize">@dimen/_8sdp</item>
+        <!--        <item name="android:fontFamily">@font/avenir_light</item>-->
+        <item name="android:textAllCaps">false</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="MyTabLayoutSecond" parent="Base.Widget.Design.TabLayout">
+        <item name="tabTextAppearance">@style/MyTabTextAppearance2</item>
+    </style>
+
+    <style name="MyTabTextAppearance2" parent="TextAppearance.AppCompat.Button">
+        <item name="android:textSize">@dimen/_12sdp</item>
+        <!--        <item name="android:fontFamily">@font/avenir_medium</item>-->
+        <item name="android:textAllCaps">false</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="MyTabLayoutThird" parent="Base.Widget.Design.TabLayout">
+        <item name="tabTextAppearance">@style/MyTabTextAppearance3</item>
+    </style>
+
+    <style name="MyTabTextAppearance3" parent="TextAppearance.AppCompat.Button">
+        <item name="android:textSize">@dimen/_10sdp</item>
+        <!--        <item name="android:fontFamily">@font/avenir_medium</item>-->
+        <item name="android:includeFontPadding">false</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="CustomBottomSheetDialogTheme" parent="Theme.Design.Light.BottomSheetDialog">
+        <item name="bottomSheetStyle">@style/CustomBottomSheetStyle</item>
+    </style>
+
+    <style name="CustomBottomSheetStyle" parent="Widget.Design.BottomSheet.Modal">
+        <item name="android:background">@android:color/transparent</item>
+    </style>
+
+    <style name="BottomNavigationView" parent="@style/TextAppearance.AppCompat.Caption">
+        <item name="android:textSize">@dimen/_8sdp</item>
+        <!--        <item name="android:fontFamily">@font/avenir_medium</item>-->
+    </style>
+
+    <style name="ShapeAppearanceOverlay.App.CornerSize25Percent" parent="">
+        <item name="cornerSize">25%</item>
+    </style>
 </resources>
