--- a/app/src/main/res/layout/common_toolbar.xml
+++ b/app/src/main/res/layout/common_toolbar.xml
@@ -17,10 +17,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:textSize="22sp"
-        android:textColor="@color/white"
         android:fontFamily="@font/poppins_semibold"
-        android:text="@string/transfer_money"/>
+        android:text="@string/transfer_money"
+        android:textColor="@color/white"
+        android:textSize="22sp" />
     <TextView
         android:id="@+id/subtitle"
         android:layout_width="wrap_content"
