--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -75,8 +75,6 @@
     </style>
 
 
-
-
     <style name="MyTabLayout" parent="Base.Widget.Design.TabLayout">
         <item name="tabTextAppearance">@style/MyTabTextAppearance</item>
     </style>
@@ -105,7 +103,7 @@
 
     <style name="MyTabTextAppearance3" parent="TextAppearance.AppCompat.Button">
         <item name="android:textSize">@dimen/_10sdp</item>
-        <!--        <item name="android:fontFamily">@font/avenir_medium</item>-->
+        <item name="android:fontFamily">@font/poppins_medium</item>
         <item name="android:includeFontPadding">false</item>
         <item name="android:textAllCaps">false</item>
         <item name="android:textStyle">bold</item>
@@ -121,7 +119,7 @@
 
     <style name="BottomNavigationView" parent="@style/TextAppearance.AppCompat.Caption">
         <item name="android:textSize">@dimen/_8sdp</item>
-        <!--        <item name="android:fontFamily">@font/avenir_medium</item>-->
+        <item name="android:fontFamily">@font/poppins_medium</item>
     </style>
 
     <style name="ShapeAppearanceOverlay.App.CornerSize25Percent" parent="">
