--- a/app/src/main/res/layout/item_features.xml
+++ b/app/src/main/res/layout/item_features.xml
@@ -7,7 +7,7 @@
     android:layout_height="wrap_content">
 
     <androidx.appcompat.widget.LinearLayoutCompat
-        android:id="@+id/linearLayoutCompat"
+        android:id="@+id/itemsLayoutID"
         android:layout_width="@dimen/_60sdp"
         android:layout_height="@dimen/_60sdp"
         android:background="@drawable/item_bg"
@@ -34,8 +34,8 @@
         android:text="Add Money"
         android:textColor="@color/white"
         android:textSize="12sp"
-        app:layout_constraintEnd_toEndOf="@+id/linearLayoutCompat"
-        app:layout_constraintStart_toStartOf="@+id/linearLayoutCompat"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayoutCompat" />
+        app:layout_constraintEnd_toEndOf="@+id/itemsLayoutID"
+        app:layout_constraintStart_toStartOf="@+id/itemsLayoutID"
+        app:layout_constraintTop_toBottomOf="@+id/itemsLayoutID" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
