--- a/app/src/main/res/navigation/main_nav_graph.xml
+++ b/app/src/main/res/navigation/main_nav_graph.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main_nav_graph"
-    app:startDestination="@id/loginFragment">
+    app:startDestination="@id/splashFragment">
 
     <fragment
         android:id="@+id/splashFragment"
@@ -31,12 +31,36 @@
         android:label="@string/home"
         tools:layout="@layout/fragment_home">
 
+        <action
+            android:id="@+id/action_homeFragment_to_walletFragment"
+            app:destination="@id/walletFragment" />
+
     </fragment>
+
+    <fragment
+        android:id="@+id/walletFragment"
+        android:name="com.octal.actorpay.WalletStatementFragment"
+        android:label="@string/wallet_statement"
+        tools:layout="@layout/fragment_walletw_statement">
+
+
+        <action
+            android:id="@+id/action_walletFragment_to_homeFragment"
+            app:destination="@+id/homeFragment"
+            app:popUpTo="@id/homeFragment"
+            app:popUpToInclusive="true" />
+    </fragment>
+
     <fragment
         android:id="@+id/transferMoneyFragment"
         android:name="com.octal.actorpay.TransferMoneyFragment"
         android:label="@string/transfer_money"
-        tools:layout="@layout/fragment_transfer_money" />
+        tools:layout="@layout/fragment_transfer_money">
+        <!-- <action
+             app:popUpTo="@id/homeFragment"
+             app:popUpToInclusive="true" />-->
+    </fragment>
+
     <fragment
         android:id="@+id/productListFragment"
         android:name="com.octal.actorpay.ProductsListFragment"
@@ -60,11 +84,7 @@
         android:name="com.octal.actorpay.rewards_points.RewardsPointsFragment"
         android:label="@string/rewards"
         tools:layout="@layout/fragment_rewards_points" />
-    <fragment
-        android:id="@+id/walletFragment"
-        android:name="com.octal.actorpay.WalletStatementFragment"
-        android:label="@string/wallet_statement"
-        tools:layout="@layout/fragment_walletw_statement" />
+
     <fragment
         android:id="@+id/miscFragment"
         android:name="com.octal.actorpay.MiscFragment"
